--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
-{  
+{
+  "version": "0.0.1",
   "devDependencies": {
     "autoprefixer-core": "^5.1.7",
     "bower": "^1.3.12",
-    "electron-prebuilt": "^0.36.0",
+    "electron-prebuilt": "^1.2.0",
     "electron-windows-installer": "^1.2.5",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
@@ -25,6 +26,7 @@
     "wiredep": "^2.2.2"
   },
   "dependencies": {
+    "electron-settings": "^1.0.4",
     "gulp-run": "^1.6.12"
   }
 }
